Stylesheet/emote/tag updates 2015-08-24

--- a/source-css/afterplounge.css
+++ b/source-css/afterplounge.css
@@ -785,7 +785,9 @@ border-right: 2px solid black !important; border: 2px solid black !important; bo
 background: url(%%bk50%%) !important;
 }
 
+.md {color: white;}
 
+.RESDialogContents {color: black;}
 
 .md blockquote, .help blockquote {
 border-left: 2px solid white !important;
