--- a/source-css/braeburnquisition.css
+++ b/source-css/braeburnquisition.css
@@ -12,14 +12,6 @@ a[href|="/braescrunch"] {
     float:left;
     width:
 */
-a[href|="/brian"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 197px;
-    height: 216px;
-    background-image:url(%%Brian%%)
-}
 
 a[href|="/braesoarnuzzle"] {
     display: block;
@@ -1602,6 +1594,78 @@ a[href|="/treehug"] {
  height: 241px;
  background-image: url(%%TreeHug%%);
  
+}
+a[href|="/blackjackboop"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 260px;
+ height: 160px;
+ background-image: url(%%spritesheet420%%);
+ background-position: 0px 0px;
+}
+a[href|="/chibilyra"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 210px;
+ height: 206px;
+ background-image: url(%%spritesheet420%%);
+ background-position: -2px -163px;
+}
+a[href|="/twixnuzzle"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 245px;
+ height: 160px;
+ background-image: url(%%spritesheet420%%);
+ background-position: 0px -369px;
+}
+a[href|="/treehuggerhi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 180px;
+ height: 198px;
+ background-image: url(%%spritesheet420%%);
+ background-position: -1px -627px;
+}
+a[href|="/lyrahai"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 190px;
+ height: 201px;
+ background-image: url(%%spritesheet420%%);
+ background-position: -2px -827px;
+}
+a[href|="/blushingtrixie"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 180px;
+ height: 193px;
+ background-image: url(%%spritesheet420%%);
+ background-position: -2px -1036px;
+}
+a[href|="/treehuggertired"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 190px;
+ height: 225px;
+ background-image: url(%%spritesheet420%%);
+ background-position: 0px -1230px;
+}
+a[href|="/treehuggerblush"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 180px;
+ height: 255px;
+ background-image: url(%%spritesheet420%%);
+ background-position: 0px -1458px;
 }
 div.titlebox span.word {display:none; }
 div.titlebox span.number:after {content:" Sexy Beasts";}
