--- a/source-css/mylittlechaos.css
+++ b/source-css/mylittlechaos.css
@@ -224,6 +224,16 @@ a[href|="/larsonvodka"] {
     margin-bottom: 5px;
     margin-right: 5px
     }
+a[href|="/wraparound"] {
+    width: 120px;
+    height: 94px;
+    background-image: url(%%wraparound%%);
+    display: block;
+    clear: none;
+    float: left;
+    margin-bottom: 5px;
+    margin-right: 5px
+    }
 
 /*== For Tubing ==*/
 a[href|="/dyefooter"] {
