--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -461,7 +461,7 @@ a[href|="/apathiasquint"], a[href|="/rdohyeah"], a[href|="/rainbowstache"], a[hr
 {background-image:url(%%70x70a%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70b 'motes */
-a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/pinkieainthavingthatshit"], a[href|="/ppyay"], a[href|="/snowdropmeh"], a[href|="/flutterheadtilt"], a[href|="/scratchhide"], a[href|="/octavia0"], a[href|="/braehay"], a[href|="/dashwant"], a[href|="/daringtired"], a[href|="/fs:I"], a[href|="/fsboop"], a[href|="/theresafourthwall"], a[href|="/ppaside"], a[href|="/ajstinkeye"], a[href|="/berrypinchwhat"], a[href|="/rubywhat"], a[href|="/octaviamanic"], a[href|="/rubylewd"]
+a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/twifascinating"], a[href|="/sunsetjoy"], a[href|="/karmahappy2"], a[href|="/karmagrin"], a[href|="/apathiablank"], a[href|="/apathiaconcern"], a[href|="/karmalook"], a[href|="/apathiaeyebrow"], a[href|="/discentiaangrysquint"], a[href|="/colgatebraces"], a[href|="/colgatenews"], a[href|="/colgatenotimpressed"], a[href|="/changelingshrug"], a[href|="/sunbreadshimmer"], a[href|="/sbeestare"], a[href|="/karmasquint"], a[href|="/dissquint"], a[href|="/discentiasquint"], a[href|="/trixiedafaq"], a[href|="/queensmeel"], a[href|="/queenglee"], a[href|="/pinkieainthavingthatshit"], a[href|="/ppyay"], a[href|="/snowdropmeh"], a[href|="/flutterheadtilt"], a[href|="/scratchhide"], a[href|="/octavia0"], a[href|="/braehay"], a[href|="/dashwant"], a[href|="/daringtired"], a[href|="/fs:I"], a[href|="/fsboop"], a[href|="/theresafourthwall"], a[href|="/ppaside"], a[href|="/ajstinkeye"], a[href|="/berrypinchwhat"], a[href|="/rubywhat"], a[href|="/octaviamanic"], a[href|="/rubylewd"], a[href|="/fsnotmad"]
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -473,7 +473,7 @@ a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100c 'motes */
-a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"], a[href|="/princesslenny"], a[href|="/applebat2"], a[href|="/ididntlisten"], a[href|="/daringlicious"], a[href|="/daringcheeky"], a[href|="/discordmad"], a[href|="/g4smooze"], a[href|="/sadicecreamtwilight"], a[href|="/abswear"], a[href|="/tavilewd"], a[href|="/flaskhead"], a[href|="/lemonflask"]
+a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"], a[href|="/princesslenny"], a[href|="/applebat2"], a[href|="/ididntlisten"], a[href|="/daringlicious"], a[href|="/daringcheeky"], a[href|="/discordmad"], a[href|="/g4smooze"], a[href|="/sadicecreamtwilight"], a[href|="/abswear"], a[href|="/tavilewd"], a[href|="/flaskhead"], a[href|="/lemonflask"], a[href|="/justdoit"], a[href|="/vinyllook"]
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -667,11 +667,11 @@ a[href|="/shibetwi"], a[href|="/rdtwicrazy"], a[href|="/apathiaunsure"], a[href|
 {background-position: -200% -700%;}
 
 /* Grid pos 0,8 'motes */
-a[href|="/wowsocane"], a[href|="/rdtwibeam"], a[href|="/apathiashrug"], a[href|="/snowdropmeh"]
+a[href|="/wowsocane"], a[href|="/rdtwibeam"], a[href|="/apathiashrug"], a[href|="/snowdropmeh"], a[href|="/justdoit"]
 {background-position: -0% -800%;}
 
 /* Grid pos 1,8 'motes */
-a[href|="/shibelyra"], a[href|="/rdtwisquint"], a[href|="/chrome"], a[href|="/flutterheadtilt"]
+a[href|="/shibelyra"], a[href|="/rdtwisquint"], a[href|="/chrome"], a[href|="/flutterheadtilt"], a[href|="/vinyllook"]
 {background-position: -100% -800%;}
 
 /* Grid pos 2,8 'motes */
@@ -727,7 +727,7 @@ a[href|="/discentiaelated"], a[href|="/raritylipbite"], a[href|="/rubylewd"]
 {background-position: -200% -1200%;}
 
 /* Grid pos 0,13 'motes */
-a[href|="/cadshrug"], a[href|="/cheekyjack"]
+a[href|="/cadshrug"], a[href|="/cheekyjack"], a[href|="/fsnotmad"]
 {background-position: 0 -1300%;}
 
 /* Grid pos 1,13 'motes */
