--- a/source-css/troubleshoes.css
+++ b/source-css/troubleshoes.css
@@ -189,6 +189,10 @@ body .disabled .morelink a:hover {
   cursor: default!important;
 }
 
+/* Reddit 'Create' Box */
+
+.side .sidebox .spacer { visibility: hidden; display: none; }
+
 /* Flair Settings */
 
 .flair {
