--- a/source-css/equestriagirls.css
+++ b/source-css/equestriagirls.css
@@ -869,8 +869,8 @@ textarea {
 .side .md table:nth-of-type(2) tr:nth-of-type(14) td:nth-of-type(4):after{content:"appleliar"}
 .side .md table:nth-of-type(2) tr:nth-of-type(14) td:nth-of-type(5):after{content:"soawesome"}
 .side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(2):after{content:"vpluna"}
-.side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(3):after{content:" "}
-.side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(4):after{content:" "}
+.side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(3):after{content:"hderp"}
+.side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(4):after{content:"derpybattle"}
 .side .md table:nth-of-type(2) tr:nth-of-type(16) td:nth-of-type(5):after{content:"rdcool"}
 .side .md table:nth-of-type(2) tr:nth-of-type(18) td:nth-of-type(2):after{content:"abwut"}
 .side .md table:nth-of-type(2) tr:nth-of-type(18) td:nth-of-type(3):after{content:"manspike"}
@@ -883,6 +883,58 @@ textarea {
 .side .md table:nth-of-type(3) tr:nth-of-type(2) td:nth-of-type(2):after{content:"twilightrocks"}
 .side .md table:nth-of-type(3) tr:nth-of-type(2) td:nth-of-type(3):after{content:"rainbowrocks"}
 .side .md table:nth-of-type(3) tr:nth-of-type(2) td:nth-of-type(4):after{content:"pinkierocks"}
+
+/*announcement bar*/
+
+.side .md table:last-of-type {
+  display: table;
+  position: absolute;
+  top: 128px;
+  left: 6px;
+  width: calc(100% - 326px);
+  margin: 0;
+  border-style: none;
+  font-family: verdana,arial,helvetica,sans-serif;
+}
+
+.side .md table:last-of-type th { display:none }
+
+.side .md table:last-of-type td {
+  height: 0 !important;
+  border: 1px solid #b57ac1 !important;
+  background-color: #eee9f5 !important;
+}
+
+.side .md table:last-of-type td:after { content: none !important }
+
+.side .md table:last-of-type td:first-of-type {
+  width: 0;
+  padding: 1px 6px;
+  border-right-style: none !important;
+}
+
+.side .md table:last-of-type td:last-of-type {
+  padding: 1px 0px;
+  border-left-style: none !important;
+}
+
+.side .md table:last-of-type td:first-of-type a {
+  display: block;
+  width: 29px;
+  height: 32px;
+  cursor: default;
+  pointer-events: none;
+  background-image: url(%%wondercolts%%) !important;
+}
+
+.side .md table:last-of-type td a {
+  color: #2E1364 !important;
+  font-weight: bold;
+}
+
+.side .md table:last-of-type td a:last-of-type { color: #AC1280 !important }
+
+.content { margin-top: 46px }
 
 /*emotes and flair*/
 
@@ -1281,7 +1333,7 @@ a[href|="/eg09"],a[href|="/ohmyshy"],a[href|="/reg09"],a[href|="/rohmyshy"] {bac
 a[href|="/eg19"],a[href|="/dogdance"],a[href|="/reg19"],a[href|="/rdogdance"] {background-position: -70px -630px}
 a[href|="/eg29"],a[href|="/twiheh"],a[href|="/reg29"],a[href|="/rtwiheh"] {background-position: -140px -630px}
 
-a[href|="/egb00"],a[href|="/flash"],a[href|="/egb10"],a[href|="/gsmith"],a[href|="/egb20"],a[href|="/meangirl"],a[href|="/egb01"],a[href|="/bigbrother"],a[href|="/egb11"],a[href|="/powerfultrix"],a[href|="/egb21"],a[href|="/shyhurt"],a[href|="/egb02"],a[href|="/flutterface"],a[href|="/egb12"],a[href|="/grrr"],a[href|="/egb22"],a[href|="/bookz"],a[href|="/egb03"],a[href|="/noparty"],a[href|="/egb13"],a[href|="/suavespike"],a[href|="/egb23"],a[href|="/gah"],a[href|="/egb04"],a[href|="/twinope"],a[href|="/egb14"],a[href|="/imawesome"],a[href|="/egb24"],a[href|="/ajserious"],a[href|="/egb05"],a[href|="/wonderwink"],a[href|="/egb15"],a[href|="/sunset"],a[href|="/egb25"],a[href|="/ohmydog"],a[href|="/egb06"],a[href|="/dashcool"],a[href|="/egb16"],a[href|="/reallyshy"],a[href|="/egb26"],a[href|="/appleliar"],a[href|="/regb00"],a[href|="/rflash"],a[href|="/regb10"],a[href|="/rgsmith"],a[href|="/regb20"],a[href|="/rmeangirl"],a[href|="/regb01"],a[href|="/rbigbrother"],a[href|="/regb11"],a[href|="/rpowerfultrix"],a[href|="/regb21"],a[href|="/rshyhurt"],a[href|="/regb02"],a[href|="/rflutterface"],a[href|="/regb12"],a[href|="/rgrrr"],a[href|="/regb22"],a[href|="/rbookz"],a[href|="/regb03"],a[href|="/rnoparty"],a[href|="/regb13"],a[href|="/rsuavespike"],a[href|="/regb23"],a[href|="/rgah"],a[href|="/regb04"],a[href|="/rtwinope"],a[href|="/regb14"],a[href|="/rimawesome"],a[href|="/regb24"],a[href|="/rajserious"],a[href|="/regb05"],a[href|="/rwonderwink"],a[href|="/regb15"],a[href|="/rsunset"],a[href|="/regb25"],a[href|="/rohmydog"],a[href|="/regb06"],a[href|="/rdashcool"],a[href|="/regb16"],a[href|="/rreallyshy"],a[href|="/regb26"],a[href|="/rappleliar"],a[href|="/egb07"],a[href|="/viceprincipalluna"],a[href|="/vpluna"],a[href|="/theveep"] {
+a[href|="/egb00"],a[href|="/flash"],a[href|="/egb10"],a[href|="/gsmith"],a[href|="/egb20"],a[href|="/meangirl"],a[href|="/egb01"],a[href|="/bigbrother"],a[href|="/egb11"],a[href|="/powerfultrix"],a[href|="/egb21"],a[href|="/shyhurt"],a[href|="/egb02"],a[href|="/flutterface"],a[href|="/egb12"],a[href|="/grrr"],a[href|="/egb22"],a[href|="/bookz"],a[href|="/egb03"],a[href|="/noparty"],a[href|="/egb13"],a[href|="/suavespike"],a[href|="/egb23"],a[href|="/gah"],a[href|="/egb04"],a[href|="/twinope"],a[href|="/egb14"],a[href|="/imawesome"],a[href|="/egb24"],a[href|="/ajserious"],a[href|="/egb05"],a[href|="/wonderwink"],a[href|="/egb15"],a[href|="/sunset"],a[href|="/egb25"],a[href|="/ohmydog"],a[href|="/egb06"],a[href|="/dashcool"],a[href|="/egb16"],a[href|="/reallyshy"],a[href|="/egb26"],a[href|="/appleliar"],a[href|="/regb00"],a[href|="/rflash"],a[href|="/regb10"],a[href|="/rgsmith"],a[href|="/regb20"],a[href|="/rmeangirl"],a[href|="/regb01"],a[href|="/rbigbrother"],a[href|="/regb11"],a[href|="/rpowerfultrix"],a[href|="/regb21"],a[href|="/rshyhurt"],a[href|="/regb02"],a[href|="/rflutterface"],a[href|="/regb12"],a[href|="/rgrrr"],a[href|="/regb22"],a[href|="/rbookz"],a[href|="/regb03"],a[href|="/rnoparty"],a[href|="/regb13"],a[href|="/rsuavespike"],a[href|="/regb23"],a[href|="/rgah"],a[href|="/regb04"],a[href|="/rtwinope"],a[href|="/regb14"],a[href|="/rimawesome"],a[href|="/regb24"],a[href|="/rajserious"],a[href|="/regb05"],a[href|="/rwonderwink"],a[href|="/regb15"],a[href|="/rsunset"],a[href|="/regb25"],a[href|="/rohmydog"],a[href|="/regb06"],a[href|="/rdashcool"],a[href|="/regb16"],a[href|="/rreallyshy"],a[href|="/regb26"],a[href|="/rappleliar"],a[href|="/egb07"],a[href|="/viceprincipalluna"],a[href|="/vpluna"],a[href|="/theveep"],a[href|="/egb17"],a[href|="/hderp"],a[href|="/egb27"],a[href|="/derpybattle"] {
   display: block;
   clear: none;
   float: left;
@@ -1312,6 +1364,8 @@ a[href|="/egb06"],a[href|="/dashcool"],a[href|="/regb06"],a[href|="/rdashcool"] 
 a[href|="/egb16"],a[href|="/reallyshy"],a[href|="/regb16"],a[href|="/rreallyshy"] {background-position: -70px -420px}
 a[href|="/egb26"],a[href|="/appleliar"],a[href|="/regb26"],a[href|="/rappleliar"]  {background-position: -140px -420px}
 a[href|="/egb07"],a[href|="/viceprincipalluna"],a[href|="/vpluna"],a[href|="/theveep"] {background-position: 0px -490px}
+a[href|="/egb17"],a[href|="/hderp"] {background-position: -70px -490px}
+a[href|="/egb27"],a[href|="/derpybattle"] {background-position: -140px -490px}
 
 a[href|="/egc00"],a[href|="/twilightrocks"],a[href|="/egc10"],a[href|="/rainbowrocks"],a[href|="/egc20"],a[href|="/pinkierocks"],a[href|="/regc00"],a[href|="/rtwilightrocks"],a[href|="/regc10"],a[href|="/rrainbowrocks"],a[href|="/regc20"],a[href|="/rpinkierocks"] {
   display: block;
