--- a/source-css/glimmerquisition.css
+++ b/source-css/glimmerquisition.css
@@ -261,7 +261,7 @@ a[href|="/starlightfrench"] {
   background-position: -70px -405px;
 }
 
-a[href|="/moondancersaywhat"], a[href|="/moondancersmile"], a[href|="/moondancerfrown"], a[href|="/moondancerbeam"], a[href|="/moondancerhappycry"], a[href|="/moondanceradorkable"], a[href|="/moondancerdisappoint"] {
+a[href|="/moondancersaywhat"], a[href|="/moondancersmile"], a[href|="/moondancerfrown"], a[href|="/moondancerbeam"], a[href|="/moondancerhappycry"], a[href|="/moondanceradorkable"], a[href|="/moondancerdisappoint"], a[href|="/moondancerbook"] {
   float: left;
   display: block;
   height: 70px;
@@ -301,4 +301,9 @@ a[href|="/moondanceradorkable"] {
 a[href|="/moondancerdisappoint"] {
   width: 70px;
   background-position: -420px 0;
+}
+
+a[href|="/moondancerbook"] {
+  width: 70px;
+  background-position: -490px 0;
 }
