--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -273,10 +273,10 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%pinkie-stache-hat%%);
- width:60px;
- height:60px;
- margin-top:-35px;
+ background:url(%%kilroywashere%%);
+ width:70px;
+ height:46px;
+ margin-top:-21px;
  margin-left:5px;
  margin-bottom:0px;
  margin-right:-40px;
