Adds 'bpm-' to the 'dark' and 'voat' classes to make them unique.

--- a/addon/bpmotes.css
+++ b/addon/bpmotes.css
@@ -141,7 +141,7 @@
 }
 
 /* Emotes button on Voat. */
-.bpm-search-toggle.voat {
+.bpm-search-toggle.bpm-voat {
     margin-left: 1px;
     margin-right: 1px;
     width: 50px;
@@ -202,7 +202,7 @@
 }
 
 /* For use in Voat's dark theme */
-#bpm-sb-container.dark {
+#bpm-sb-container.bpm-dark {
     background-color: #444;
 }
 
@@ -297,7 +297,7 @@
 }
 
 /* For use in Voat's dark theme */
-#bpm-sb-tabframe.dark {
+#bpm-sb-tabframe.bpm-dark {
     background-color: #292929;
 }
 
