--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -133,8 +133,8 @@ transition: all 3s linear;
 
 /* CSS last generated on Sat, 16 Feb 2013 02:05:57 -0600 by UNKNOWN on derpy */
 div.titlebox span.word {display:none}
-div.titlebox .subscribers span.number:after {content:" Days Until Next Episode"}
-div.titlebox .users-online span.number:after {content:" Users Weeping"}
+div.titlebox .subscribers span.number:after {content:" Something Funny"}
+div.titlebox .users-online span.number:after {content:" Something Else Funny"}
 
 .sidecontentbox .flair {display:none}
 .sidebox .spacer {display:none}
@@ -226,7 +226,7 @@ border-top-right-radius: 5px;
 
 #header-img
 { 
- margin:0px 10px -3px 10px;
+ margin:0px 10px -16px 10px;
 }
 
 #header-bottom-left{padding-top:10px}
@@ -1100,6 +1100,12 @@ a[href|="/applederp"],a[href|="/a39"],a[href|="/rapplederp"],a[href|="/ra39"],a[
 .flair-cmcopti:hover {background-position: -300% -100%}
 .flair-cmcorsch {background-position: -300% -100%}
 .flair-cmcorsch:hover {background-position: -300% -100%}
+.flair-cmcgb {background-position: -300% -100%}
+.flair-cmcgb:hover {background-position: -0% -400%}
+.flair-cmcsparroew {background-position: -300% -100%}
+.flair-cmcsparroew:hover {background-position: -0% -200%}
+.flair-cmcaroelen {background-position: -300% -100%}
+.flair-cmcaroelen:hover {background-position: -100% -100%}
 
 table tr td:first-child {width:14px}
 
