Stylesheet/emote/tag updates 2015-09-07

--- a/minified-css/ponycountdown.css
+++ b/minified-css/ponycountdown.css
@@ -1,1 +1,1 @@
-a[href|="/countdown"]{display:block;clear:none;float:left;width:300px;height:60px;background-image:url("//a.thumbs.redditmedia.com/fPTnuyGkrik2ziqS3xeMuGhF83FoLWWIB89gEGb9Bm4.png")}
+a[href|="/countdown"]{display:block;clear:none;float:left;width:300px;height:60px;background-image:url("//b.thumbs.redditmedia.com/JTO1nz7wbYIE2CBYl5DzdE2nAo7ePePuOMbvl8z0mtk.png")}
