--- a/source-css/bigmacintosh.css
+++ b/source-css/bigmacintosh.css
@@ -34,6 +34,14 @@ a[href|="/guiltymac"] {
     height: 186px;
     background-image: url(%%guiltymac%%)
     }
+a[href|="/bigmouthmac"] {     
+    display: block;
+    clear: none;
+    float: left;
+    width: 100px;
+    height: 131px;
+    background-image: url(%%bigmouth%%)
+    }
 a[href|="/macsalute"] {     
     display: block;
     clear: none;
