--- a/source-css/braeburnquisition.css
+++ b/source-css/braeburnquisition.css
@@ -1667,6 +1667,16 @@ a[href|="/treehuggerblush"] {
  background-image: url(%%spritesheet420%%);
  background-position: 0px -1458px;
 }
+
+a[href|="/platonicfriends"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 240px;
+ height: 126px;
+ background-image: url(%%platonicfriends%%);
+ 
+}
 div.titlebox span.word {display:none; }
 div.titlebox span.number:after {content:" Sexy Beasts";}
 
