--- a/source-css/sugarbelle.css
+++ b/source-css/sugarbelle.css
@@ -233,7 +233,7 @@ color:#29162a;
 
 /*===easter egg===*/
 
-#baconBit {
+div#baconBit {
 height:90px;
 width:84px;
 background:url(%%easteregg%%);
@@ -339,6 +339,7 @@ line-height: 240%;
 .flair-thunderlane { background-position:0 -1900% }
 .flair-starlightglimmer { background-position:0 -2000% }
 .flair-nightglider { background-position:0 -2100% }
+.flair-troubleshoes { background-position:0 -2200% }
 
 .flair-twilight { background-position:-100% 0 }
 .flair-rarity { background-position:-100% -100% }
@@ -362,6 +363,7 @@ line-height: 240%;
 .flair-applefritter { background-position:-100% -1900% }
 .flair-equality { background-position:-100% -2000% }
 .flair-partyfavor { background-position:-100% -2100% }
+.flair-screwloose { background-position:-100% -2200% }
 
 .flair-fluttershy { background-position:-200% 0 }
 .flair-trixie { background-position:-200% -100% }
@@ -384,6 +386,8 @@ line-height: 240%;
 .flair-flashsentry { background-position:-200% -1800% }
 .flair-flutterbat { background-position:-200% -1900% }
 .flair-doublediamond { background-position:-200% -2000% }
+.flair-discord { background-position:-200% -2100% }
+.flair-bulkbiceps { background-position:-200% -2200% }
 
 .flair-applejack { background-position:-300% 0 }
 .flair-mod { background-position:-300% -100% }
@@ -406,6 +410,7 @@ line-height: 240%;
 .flair-coco { background-position:-300% -1800% }
 .flair-blossomforth { background-position:-300% -1900% }
 .flair-sugarbelle { background-position:-300% -2000% }
+.flair-treehugger { background-position:-300% -2100% }
 
 .flair-samb { background-position: -300% -100% }
 .flair-samb:hover { background-position: -300% -2000% }
