--- a/source-css/thebelletower.css
+++ b/source-css/thebelletower.css
@@ -1292,3 +1292,12 @@ a[href="/abscarf"]{
     height:179px;
     background-position: 0px -350px;
 }
+
+a[href="/macwhat"]{
+    display:block;
+    clear:none;
+    float:left;
+    width:98px;
+    height:128px;
+    background-image: url(%%BigMac-Single%%) !important;
+}
